[gd_scene load_steps=22 format=3]

[ext_resource type="Script" path="res://scripts/Player.gd" id=1]
[ext_resource type="Shape3D" path="res://scenes/ground_shape.tres" id=2]
[ext_resource type="Mesh" path="res://scenes/ground_mesh.tres" id=3]
[ext_resource type="Mesh" path="res://scenes/wall_mesh.tres" id=4]
[ext_resource type="Shape3D" path="res://scenes/wall_shape.tres" id=5]
[ext_resource type="Shape3D" path="res://scenes/dummy_shape.tres" id=6]
[ext_resource type="Script" path="res://scripts/Dummy.gd" id=7]
[ext_resource type="Mesh" path="res://scenes/dummy_mesh.tres" id=8]
[ext_resource type="Script" path="res://scripts/HUD.gd" id=9]
[ext_resource type="Material" path="res://materials/placeholder_gun.tres" id=10]
[ext_resource type="Material" path="res://materials/placeholder_gun_accent.tres" id=11]
[ext_resource type="Script" path="res://scripts/Gun.gd" id=12]
[ext_resource type="Environment" path="res://scenes/sky_environment.tres" id=13]

[sub_resource type="CapsuleShape3D" id=1]
radius = 0.35
height = 1.2

[sub_resource type="CapsuleMesh" id=2]
radius = 0.35
height = 1.2

[sub_resource type="BoxMesh" id=3]
size = Vector3(0.5, 0.2, 0.9)
material = ExtResource( 10 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.03
bottom_radius = 0.035
height = 0.55
radial_segments = 16
material = ExtResource( 10 )

[sub_resource type="BoxMesh" id=5]
size = Vector3(0.12, 0.25, 0.2)
material = ExtResource( 11 )

[sub_resource type="BoxMesh" id=6]
size = Vector3(0.14, 0.06, 0.2)
material = ExtResource( 10 )

[sub_resource type="BoxMesh" id=7]
size = Vector3(0.12, 0.25, 0.2)
material = ExtResource( 11 )

[sub_resource type="QuadMesh" id=8]
size = Vector2(1.2, 0.16)

[sub_resource type="QuadMesh" id=9]
size = Vector2(1.1, 0.1)

[node name="Gameplay" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 13 )

[node name="World" type="Node3D" parent="."]

[node name="Player" type="CharacterBody3D" parent="World"]
position = Vector3(0, 1.5, 0)
script = ExtResource( 1 )

[node name="Camera" type="Camera3D" parent="World/Player"]
current = true

[node name="Gun" type="Node3D" parent="World/Player/Camera"]
position = Vector3(0.3, -0.25, -0.7)
rotation = Vector3(0, 0.02, 0)
script = ExtResource( 12 )

[node name="Body" type="MeshInstance3D" parent="World/Player/Camera/Gun"]
mesh = SubResource( 3 )

[node name="Barrel" type="MeshInstance3D" parent="World/Player/Camera/Gun"]
position = Vector3(0, 0, -0.7)
rotation = Vector3(1.5708, 0, 0)
mesh = SubResource( 4 )

[node name="Grip" type="MeshInstance3D" parent="World/Player/Camera/Gun"]
position = Vector3(-0.05, -0.22, -0.05)
mesh = SubResource( 5 )

[node name="Sight" type="MeshInstance3D" parent="World/Player/Camera/Gun"]
position = Vector3(0, 0.14, -0.1)
mesh = SubResource( 6 )

[node name="Mag" type="Node3D" parent="World/Player/Camera/Gun"]
position = Vector3(0.08, -0.25, 0.1)

[node name="MagMesh" type="MeshInstance3D" parent="World/Player/Camera/Gun/Mag"]
mesh = SubResource( 7 )

[node name="PlayerCollision" type="CollisionShape3D" parent="World/Player"]
shape = SubResource( 1 )

[node name="PlayerMesh" type="MeshInstance3D" parent="World/Player"]
mesh = SubResource( 2 )

[node name="Floor" type="StaticBody3D" parent="World"]

[node name="Collision" type="CollisionShape3D" parent="World/Floor"]
shape = ExtResource( 2 )

[node name="FloorMesh" type="MeshInstance3D" parent="World/Floor"]
mesh = ExtResource( 3 )

[node name="WallLeft" type="StaticBody3D" parent="World"]
position = Vector3(-4, 3, -10)

[node name="WallLeftCollision" type="CollisionShape3D" parent="World/WallLeft"]
shape = ExtResource( 5 )

[node name="WallLeftMesh" type="MeshInstance3D" parent="World/WallLeft"]
mesh = ExtResource( 4 )

[node name="WallRight" type="StaticBody3D" parent="World"]
position = Vector3(4, 3, -10)

[node name="WallRightCollision" type="CollisionShape3D" parent="World/WallRight"]
shape = ExtResource( 5 )

[node name="WallRightMesh" type="MeshInstance3D" parent="World/WallRight"]
mesh = ExtResource( 4 )

[node name="Dummy" type="StaticBody3D" parent="World"]
position = Vector3(0, 1, -24)
script = ExtResource( 7 )

[node name="DummyCollision" type="CollisionShape3D" parent="World/Dummy"]
shape = ExtResource( 6 )

[node name="DummyMesh" type="MeshInstance3D" parent="World/Dummy"]
mesh = ExtResource( 8 )

[node name="HealthBar" type="Node3D" parent="World/Dummy"]
position = Vector3(0, 1.3, 0)

[node name="HealthBack" type="MeshInstance3D" parent="World/Dummy/HealthBar"]
mesh = SubResource( 8 )

[node name="HealthFill" type="Node3D" parent="World/Dummy/HealthBar"]
position = Vector3(0, 0, 0.01)

[node name="HealthFillMesh" type="MeshInstance3D" parent="World/Dummy/HealthBar/HealthFill"]
mesh = SubResource( 9 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HudWidget" type="Control" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
